--- a/clase19/front_api-clima-master/assets/style.css
+++ b/clase19/front_api-clima-master/assets/style.css
@@ -1,11 +1,3 @@
 body{
-  background-color: gold;
-}
-#map {
-  height: 100%;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  background-color: gray;
 }
